[metadata]
name = Gale
version = 1.2.0
url = https://github.com/R3mmurd/gale
author = Alejandro Mujica
author_email = aledrums@gmail.com
description = Collection of reusable codes to make games by using pygame.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires= >=3.7
packages =
    gale
    gale.management
zip_safe = false
install_requires =
    click
    numpy
    pygame
    wheel

[options.entry_points]
console_scripts =
    gale-admin = gale.management:execute_from_command_line